03-network-policies/backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: backend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
            run: frontend
    ports:
      - port: 80
        protocol: TCP
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
            ns: cassandra
    ports:
      - port: 80
        protocol: TCP
